# nexus-link

./: .gitignore  README.md
android-client/: build.gradle.kts  local.properties  settings.gradle.kts
android-client/app/: build.gradle.kts
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/assets/: index.html
android-client/app/src/main/java/com/nexuslink/client/: MainActivity.kt  SettingsActivity.kt  ShareReceiverActivity.kt  TransparentActivity.kt
android-client/app/src/main/res/drawable/: battery_fill.xml  battery_outline.xml  battery_terminal.xml  ic_arrow_back.xml  ic_battery_charging.xml  ic_check_circle.xml  ic_copy.xml  ic_dashboard.xml  ic_desktop.xml  ic_file.xml  ic_folder.xml  ic_history.xml  ic_image.xml  ic_laptop.xml  ic_notifications.xml  ic_settings.xml  ic_sync_alt.xml  ic_wifi.xml
android-client/app/src/main/res/layout/: activity_main.xml  activity_settings.xml
android-client/app/src/main/res/menu/: bottom_nav_menu.xml
android-client/app/src/main/res/values/: strings.xml
pc-server/: CMakeLists.txt  imgui.ini  main.cpp
pc-server-wpf/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SyncLinkServer.csproj
